[metadata]
name = ros_d2
version = attr: ros_d2.__version__
url = https://github.com/Greenroom-Robotics/ros_d2
author = Greenroom Robotics
author_email = team@greenroomrobotics.com
maintainer = David Revay
maintainer_email = david.revay@greenroomrobotics.com
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Plugins
    Intended Audience :: Developers
    Programming Language :: Python
    Topic :: Software Development :: Build Tools
license = Copyright (C) 2022, Greenroom Robotics
license_files = LICENSE
description = A CLI for common scripts shared between Greenroom platform modules and platform CI
long_description = file: README.md
long_description_content_type = text/markdown
keywords = colcon

[options]
packages = find:
install_requires =
    toml~=0.10
    setuptools
    colorama
    click
zip_safe = true

[options.package_data]
ros_d2 =
    **/*.py

[options.entry_points]
console_scripts =
    ros_d2 = ros_d2.cli:cli