<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>example_adder_node</name>
  <version>0.0.0</version>
  <description>A library to help unit test ros nodes.</description>
  <maintainer email="david.revay@greenroomrobotics.com">David Revay</maintainer>
  <license>Copyright (c) 2022 Greenroom Robotics Pty Ltd</license>
  <depend>example_interfaces</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
